[tool.poetry]
name = "generative-models"
version = "0.1.0"
description = "Modern Generative Models including Diffusion, VQGAN and Transformer-based models."
authors = ["Johan Attia"]
license = "MIT"
readme = "README.md"
packages = [{include = "generative_models"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
tensorflow = "2.12.0"
tensorflow-addons = "0.20.0"
matplotlib = "^3.7.1"
metaflow = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
