[tool.poetry]
name = "tf_ddpm"
version = "0.1.0"
description = "Denoising Diffusion Probabilistic and RePaint models"
authors = ["Johan Attia"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "tf_ddpm", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
tensorflow = "2.13.0"
matplotlib = "^3.7.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
pytest = "^7.4.0"
typeguard = "^4.0.0"
metaflow = "^2.9.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
